Replace JsonNullabe in generated dto and api